fix: disqus background color in dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@
   }
 
   body {
-    @apply text-black bg-white dark:bg-black  dark:text-gray-200 dark:[color-scheme:dark] transition-colors duration-200 ease-in-out;
+    @apply text-gray-900 bg-white dark:bg-black  dark:text-gray-50 transition-colors duration-200 ease-in-out;
   }
 
   :focus-visible {
